--- a/index.html
+++ b/index.html
@@ -7,199 +7,173 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;1,700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.comp.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
-    <title>Take-Out || Get to check-out your favorite</title>
+    <title>TodoList || Get this done!!</title>
 </head>
 
 <body>
-    <nav class="checkout-nav row">
-        <div class="checkout-container">
-            <span class="checkout-arrow"><svg
-            width="19"
-            height="16"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M2 8.024h15M8.05 14.049 2 8.025 8.05 2"
-              stroke="#4F4F4F"
-              stroke-width="3"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            /></svg
-        ></span>
-            <div>
-                <h1 class="checkout-hero">Checkout</h1>
-                <h4>
-                    <span class="nav-toggle">
-              Homepage / Clothing Category
-            </span> / Checkout
-                </h4>
-            </div>
-        </div>
-        <div class="checkout-cart">
-            <svg width="47" height="46" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M16 16a5 5 0 0 1 5 5v1H11v-1a5 5 0 0 1 5-5Zm7 6v-1a7 7 0 1 0-14 0v1H2v20a4 4 0 0 0 4 4h20a4 4 0 0 0 4-4V22h-7ZM4 24h24v18a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V24Z"
-            fill="#000"
-          />
-          <circle cx="35" cy="15" r="12" fill="#E15113" />
-          <path
-            d="M35.184 9.944c-.112 1.36-.688 2.352-2.688 2.352v1.328c.928 0 1.664 0 2.32-.64V21h1.856V9.944h-1.488Z"
-            fill="#fff"
-          />
-        </svg>
-        </div>
-    </nav>
-    <main class="row grid-container">
-        <section class="left-col">
-            <div class="process-bar">
-                <aside class="process-bar-1">
-                    <svg width="38" height="38" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect
-                y="19"
-                width="26.87"
-                height="26.87"
-                rx="5.912"
-                transform="rotate(-45 0 19)"
-                fill="#E15113"
-              />
-              <path
-                d="M19.482 14.755c-.138 1.242-.593 2.056-2.262 2.056v.896c.855 0 1.407 0 1.986-.552v7.132h1.241v-9.532h-.965Z"
-                fill="#fff"
-              />
-            </svg>
-                </aside>
-                <aside class="process-follow">
-                    <svg width="180" height="42" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="m5 37 16-16m0 0L1 1m20 20h138m0 0 20-20m-20 20 20 20"
-                stroke="#EFE7EC"
-              />
-            </svg>
-                </aside>
-                <aside class="process-bar-2">
-                    <svg width="54" height="54" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <g
-                style="mix-blend-mode: exclusion"
-                opacity=".2"
-                filter="url(#a)"
-              >
-                <rect
-                  x="8"
-                  y="27"
-                  width="26.87"
-                  height="26.87"
-                  rx="5.912"
-                  transform="rotate(-45 8 27)"
-                  fill="#0E6FB5"
-                  style="mix-blend-mode: color-burn"
-                />
-                <path
-                  d="M27.482 22.755c-.138 1.242-.593 2.056-2.262 2.056v.896c.855 0 1.407 0 1.986-.552v7.132h1.241v-9.532h-.965Z"
-                  fill="#fff"
-                />
-              </g>
-              <mask id="b" fill="#fff">
-                <path
-                  d="M11.18 31.18a5.912 5.912 0 0 1 0-8.36l10.64-10.64a5.912 5.912 0 0 1 8.36 0l10.64 10.64a5.912 5.912 0 0 1 0 8.36L30.18 41.82a5.912 5.912 0 0 1-8.36 0L11.18 31.18Z"
-                />
-              </mask>
-              <path
-                d="M11.18 31.18a5.912 5.912 0 0 1 0-8.36l10.64-10.64a5.912 5.912 0 0 1 8.36 0l10.64 10.64a5.912 5.912 0 0 1 0 8.36L30.18 41.82a5.912 5.912 0 0 1-8.36 0L11.18 31.18Z"
-                fill="#fff"
-                fill-opacity=".6"
-              />
-              <path
-                d="m11.887 23.527 10.64-10.64-1.415-1.414-10.639 10.64 1.414 1.414Zm17.586-10.64 10.64 10.64 1.414-1.415-10.64-10.639-1.414 1.414Zm10.64 17.586-10.64 10.64 1.415 1.414 10.639-10.64-1.415-1.414Zm-17.586 10.64-10.64-10.64-1.414 1.415 10.64 10.639 1.414-1.415Zm6.946 0a4.912 4.912 0 0 1-6.946 0l-1.415 1.414c2.7 2.699 7.076 2.699 9.776 0l-1.415-1.415Zm10.64-17.586a4.912 4.912 0 0 1 0 6.946l1.414 1.415c2.699-2.7 2.699-7.076 0-9.776l-1.415 1.415Zm-17.586-10.64a4.912 4.912 0 0 1 6.946 0l1.415-1.414a6.912 6.912 0 0 0-9.776 0l1.415 1.414Zm-12.054 9.226a6.912 6.912 0 0 0 0 9.774l1.414-1.414a4.912 4.912 0 0 1 0-6.946l-1.414-1.415Z"
-                fill="#E15113"
-                mask="url(#b)"
-              />
-              <path
-                d="M24.695 26.093c0-1.31.497-2.427 2.166-2.427 1.462 0 1.821.965 1.821 1.765 0 1.393-.883 1.724-2.662 2.76-1.752 1.02-2.842 2.372-2.842 4.096h6.608v-1.104h-5.104v-.027c.593-2.276 5.242-2.47 5.242-5.739 0-1.82-1.407-2.855-3.035-2.855-2.359 0-3.435 1.559-3.435 3.531h1.241Z"
-                fill="#E15113"
-              />
-              <defs>
-                <filter
-                  id="a"
-                  x=".449"
-                  y=".449"
-                  width="53.102"
-                  height="53.102"
-                  filterUnits="userSpaceOnUse"
-                  color-interpolation-filters="sRGB"
-                >
-                  <feFlood
-                    flood-opacity="0"
-                    result="BackgroundImageFix"
-                  />
-                  <feBlend
-                    in="SourceGraphic"
-                    in2="BackgroundImageFix"
-                    result="shape"
-                  />
-                  <feGaussianBlur
-                    stdDeviation="5"
-                    result="effect1_foregroundBlur_155_12958"
-                  />
-                </filter>
-              </defs>
-            </svg>
-                </aside>
-                <aside class="process-follow">
-                    <svg width="180" height="42" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="m5 37 16-16m0 0L1 1m20 20h138m0 0 20-20m-20 20 20 20"
-                stroke="#EFE7EC"
-              />
-            </svg>
-                </aside>
-                <aside class="process-bar-3">
-                    <svg width="38" height="38" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect
-                x=".707"
-                y="19"
-                width="25.87"
-                height="25.87"
-                rx="5.412"
-                transform="rotate(-45 .707 19)"
-                fill="#fff"
-                fill-opacity=".6"
-                stroke="#E15113"
-              />
-              <path
-                d="M16.489 17.61c0-.938.4-1.944 2.262-1.944 1.297 0 1.82.758 1.82 1.53 0 1.104-.744 1.56-1.724 1.56h-.965v1.103h1.02c.925 0 2.015.262 2.015 1.752 0 1.145-.594 1.766-2.235 1.766-1.807 0-2.442-.938-2.442-2.318H15c0 2.152 1.352 3.421 3.78 3.421 2.041 0 3.38-.993 3.38-2.869 0-1.117-.456-1.986-1.808-2.359v-.027c.966-.387 1.462-1.021 1.462-2.028 0-1.683-1.434-2.635-3.062-2.635-2.359 0-3.504 1.297-3.504 3.049h1.242Z"
-                fill="#E15113"
-              />
-            </svg>
-                </aside>
-            </div>
-            <div class="process-textcontent">
-                <aside class="content1">Select</aside>
-                <aside class="content2">Payment</aside>
-                <aside class="content3">Confirmation</aside>
-            </div>
-            <div class="divider">
-                <svg width="680" height="3" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill="#EFE7EC" d="M0 2 719.999.807l.002 1L0 3z" />
-          </svg>
-            </div>
-            <div class="main-col"></div>
-        </section>
-        <section class="right-col">
-            <h3 class="checkout-hero u-top">Your Order</h3>
-            <div>
-                <svg width="500" height="1" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill="#EFE7EC" d="M0 0h529v1H0z" />
-          </svg>
-            </div>
-        </section>
-        <div class="paginate"></div>
-    </main>
-    <script src="build/app.bundle.js"></script>
-</body>
+    <main>
+        <header class="todo__hero">
+            <img class="todo__img" src="./img/nidheesh-kavalan-Ha501MB_XE8-unsplash 1.jpg" alt="TodoList Background" />
 
+            <h1 class="todo__text">TODO <span>LIST</span></h1>
+        </header>
+        <section class="section__container">
+            <section class="todo__container">
+                <ul class="todo__actions">
+                    <li class="todo__actions--1 todo__action">
+                        <a class="todo__links" href="">All</a>
+                    </li>
+                    <li class="todo__actions--2">
+                        <a class="todo__links" href="">Active</a>
+                    </li>
+                    <li class="todo__actions--3">
+                        <a class="todo__links" href="">Completed</a>
+                    </li>
+                    <li class="todo__actions--4">
+                        <a class="todo__links todoGo-to" href="#gotoPage">+ New task</a
+              >
+            </li>
+          </ul>
+          <ul class="todo__tasks">
+            <!-- <li class="todo__task">
+                        <div class="todo__action--check" data-id="1">
+                            <svg width="19" height="19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m6.375 7.083 2.57 1.927c.148.112.358.09.48-.05l4.742-5.418"
+                    stroke="#001F25"
+                    stroke-width=".708"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M14.875 8.5a6.375 6.375 0 1 1-4.725-6.158"
+                    stroke="#001F25"
+                    stroke-width=".708"
+                    stroke-linecap="round"
+                  />
+                </svg>
+                        </div>
+                        <div class="todo__completed">
+                            <svg width="19" height="19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle
+                    cx="9.5"
+                    cy="9.5"
+                    r="7.125"
+                    fill="#001F25"
+                  />
+                  <path
+                    d="m7.125 7.917 2.903 2.177c.149.111.358.09.48-.05l5.325-6.086"
+                    stroke="#fff"
+                    stroke-width=".316"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M16.625 9.5a7.125 7.125 0 1 1-5.281-6.882"
+                    stroke="#fff"
+                    stroke-width=".316"
+                    stroke-linecap="round"
+                  />
+                </svg>
+                        </div>
+
+                        <div class="todo__text todo__strikethru">
+                            Complete Online Javascript Course
+                        </div>
+                        <div class="todo__action--delete">
+                            <svg width="17" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M7.083 3.719v.177h2.834v-.177a1.417 1.417 0 1 0-2.834 0Zm-.885.177v-.177a2.302 2.302 0 1 1 4.604 0v.177h3.985a.443.443 0 1 1 0 .885h-1.034l-.708 8.45a2.568 2.568 0 0 1-2.559 2.352H6.514a2.567 2.567 0 0 1-2.559-2.353l-.708-8.449H2.214a.443.443 0 0 1 0-.885h3.984Zm-1.36 9.26a1.682 1.682 0 0 0 1.676 1.542h3.972a1.682 1.682 0 0 0 1.677-1.542l.702-8.375h-8.73l.703 8.375Zm2.777-5.984a.443.443 0 1 0-.886 0v5.135a.443.443 0 0 0 .886 0V7.172Zm2.213-.443c.245 0 .443.199.443.443v5.135a.443.443 0 1 1-.886 0V7.172c0-.244.199-.443.443-.443Z"
+                    fill="#001F25"
+                  />
+                </svg>
+                        </div>
+                    </li>
+                    <li class="todo__task">
+                        <div class="todo__action--check" data-id="2">
+                            <svg width="17" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m6.375 7.083 2.57 1.927c.148.112.358.09.48-.05l4.742-5.418"
+                    stroke="#001F25"
+                    stroke-width=".708"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M14.875 8.5a6.375 6.375 0 1 1-4.725-6.158"
+                    stroke="#001F25"
+                    stroke-width=".708"
+                    stroke-linecap="round"
+                  />
+                </svg>
+                        </div>
+                        <div class="todo__completed">
+                            <svg width="19" height="19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle
+                    cx="9.5"
+                    cy="9.5"
+                    r="7.125"
+                    fill="#001F25"
+                  />
+                  <path
+                    d="m7.125 7.917 2.903 2.177c.149.111.358.09.48-.05l5.325-6.086"
+                    stroke="#fff"
+                    stroke-width=".316"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M16.625 9.5a7.125 7.125 0 1 1-5.281-6.882"
+                    stroke="#fff"
+                    stroke-width=".316"
+                    stroke-linecap="round"
+                  />
+                </svg>
+                        </div>
+                        <div class="todo__text todo__strikethru">
+                            Complete Online Javascript Course
+                        </div>
+                        <div class="todo__action--delete">
+                            <svg width="17" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M7.083 3.719v.177h2.834v-.177a1.417 1.417 0 1 0-2.834 0Zm-.885.177v-.177a2.302 2.302 0 1 1 4.604 0v.177h3.985a.443.443 0 1 1 0 .885h-1.034l-.708 8.45a2.568 2.568 0 0 1-2.559 2.352H6.514a2.567 2.567 0 0 1-2.559-2.353l-.708-8.449H2.214a.443.443 0 0 1 0-.885h3.984Zm-1.36 9.26a1.682 1.682 0 0 0 1.676 1.542h3.972a1.682 1.682 0 0 0 1.677-1.542l.702-8.375h-8.73l.703 8.375Zm2.777-5.984a.443.443 0 1 0-.886 0v5.135a.443.443 0 0 0 .886 0V7.172Zm2.213-.443c.245 0 .443.199.443.443v5.135a.443.443 0 1 1-.886 0V7.172c0-.244.199-.443.443-.443Z"
+                    fill="#001F25"
+                  />
+                </svg>
+                        </div>
+                    </li> -->
+          </ul>
+        </section>
+      </section>
+    </main>
+    <aside class="todo__input" id="gotoPage">
+      <form action="">
+        <div class="todotask__input">
+          <label for="inputtodo">Task Todo</label><br />
+          <textarea
+            placeholder="Enter the title of the task"
+            name="Task todo"
+            id="inputtodo"
+            cols="30"
+            rows="2"
+            autofocus
+          ></textarea>
+        </div>
+        <div class="todotask__description">
+          <label for="inputdesc">Task Description</label><br />
+          <textarea
+            placeholder="Give a  description"
+            name="Task todo"
+            id="inputdesc"
+            cols="30"
+            rows="10"
+          ></textarea>
+        </div>
+        <br /><br />
+        <div class="btn">
+          <button class="btn-submit">Submit</button>
+        </div>
+      </form>
+    </aside>
+
+    <script src="build/app.bundle.js"></script>
+  </body>
 </html>
